Resubmit 6/25/17:  add <p>;  prevent overflow;
I neglected to add the <p> element in the initial version of the project.   The rubric required one, but the sample image didn't show one. 

At small screen images (less than 520 px),  there was horizontal scrolling on the screen.   I reduced the width of the 'featured-work'.

--- a/css/styleLt560.css
+++ b/css/styleLt560.css
@@ -8,11 +8,12 @@
 }
 
 img, embed, object, video {
-	max-width: 100%;
+	max-width: 98%;
 }
 
 body {
 	width: 98%;
+	overflow: hidden;
 }
 
 .headerBar {
@@ -96,8 +97,10 @@ hr {
 
 .featured-work-a {
 	display: flex;
+	flex-wrap: wrap;
 	color: #2d3c49;
 	font-size: 10px;
 	text-align: center;
-	padding: 1.5em;
+	padding: 1em;
+	width: 35%;
 }
